init js-app on /app

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,12 @@
     = csrf_meta_tags
   %body
     %header
-      = render 'layouts/navigation'
-    %main{:role => "main"}
-      = render 'layouts/messages'
-      = yield
+      .container
+        #header-region
+          = render 'layouts/navigation'
+    %main
+      .container
+        #main-region
+        = yield
+    %footer
+      (c) lubieniebieski 2014
