--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -49,3 +49,10 @@ section {
   @extend .row;
   margin-top: 20px;
   }
+
+.loading {
+  min-height: 50px;
+  padding: 50px 0;
+  text-align: center;
+  background: transparent image-url('loader.gif') 50% 50% no-repeat;
+}
