few fixes here and there

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -1,1 +1,8 @@
-%h1 hello
+.jumbotron
+  %h1 Welcome to Props App!
+  %p
+    If you want to say "thanks" to someone who has helped you recently, you are at the right place.
+  %p
+    Just
+    = link_to 'sign in', signin_path
+    an give a prop!
