layout fixes for login screen

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,12 +10,11 @@
     = csrf_meta_tags
   %body
     %header
-      .container
-        #header-region
-          = render 'layouts/navigation'
+      #header-region
+        = render 'layouts/navigation'
     %main
       .container
         #main-region
         = yield
-    %footer
+    %footer.text-center
       (c) lubieniebieski 2014
