copy on main page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,4 +17,9 @@
         #main-region
         = yield
     %footer.text-center
-      (c) lubieniebieski 2014
+      (c)
+      = link_to 'netguru', 'https://netguru.co'
+      |
+      Thanks to
+      = succeed '!' do
+        = link_to 'everybody involved', 'https://github.com/netguru/props/graphs/contributors'
