--- a/app/assets/stylesheets/components/_user_card.scss
+++ b/app/assets/stylesheets/components/_user_card.scss
@@ -1,9 +1,4 @@
 .user-card {
-  @media (max-width: $screen-md-min) {
-    height: 140px;
-  }
-
-  @media (min-width: $screen-md-min) {
-    height: 190px;
-  }
+  height: 120px;
+  text-align: center;
 }
