--- a/app/assets/stylesheets/components/_props_list.scss
+++ b/app/assets/stylesheets/components/_props_list.scss
@@ -1,3 +1,22 @@
 .props-list {
   padding-left: 0;
 }
+
+.prop-users {
+  font-size: 25px;
+}
+
+.prop-content {
+  @media (min-width: $screen-md-min) {
+    border-left: 1px solid #aaa;
+  }
+}
+
+.prop-body {
+  line-height: 1.2;
+  font-size: 3em;
+
+  @media (max-width: $screen-md-min) {
+    font-size: 2em;
+  }
+}
