show praised person thumbnail when giving prop

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,7 @@
 @import 'netguru-theme';
 
 @import 'components/navbar';
+@import 'components/props_form';
 @import 'components/props_list';
 @import 'components/user_card';
 @import 'controllers/login';
