add orange loader

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,5 +4,6 @@
 @import 'components/props_form';
 @import 'components/props_list';
 @import 'components/user_card';
+@import 'components/loading';
 @import 'controllers/login';
 @import 'select2'
