--- a/app/assets/stylesheets/components/_props_list.scss
+++ b/app/assets/stylesheets/components/_props_list.scss
@@ -2,6 +2,10 @@
   padding-left: 0;
 }
 
+.props-list-item {
+  padding: 15px;
+}
+
 .prop-users {
   font-size: 25px;
 }
@@ -15,6 +19,7 @@
 .prop-body {
   line-height: 1.2;
   font-size: 3em;
+  margin-bottom: 0;
 
   @media (max-width: $screen-md-min) {
     font-size: 2em;
