--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     = include_gon init: true
     = csrf_meta_tags
   %body
+    #announcements-region
     %header
       #header-region
         = render 'layouts/navigation'
