--- a/app/assets/stylesheets/components/_props_form.scss
+++ b/app/assets/stylesheets/components/_props_form.scss
@@ -1,3 +1,18 @@
 .praised-person-avatar {
-  height: 26px;
+  height: 80px;
+  margin: 10px;
+}
+
+.select2-container {
+  width: 100% !important;
+  .select2-choice {
+    height: 40px;
+    line-height: 40px;
+    font-size: 18px;
+  }
+}
+
+.user-small-face {
+  max-width: 25px;
+  margin-right: 10px;
 }
