make it shine like a diamond.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
 
 @import 'select2';
 @import 'animate';
+@import 'overrides/select2';
 @import 'components/navbar';
 @import 'components/props_form';
 @import 'components/props_list';
