--- a/app/assets/stylesheets/components/_props_list.scss
+++ b/app/assets/stylesheets/components/_props_list.scss
@@ -7,13 +7,52 @@
 }
 
 .prop-users {
-  font-size: 25px;
+  position: relative;
+  img { width: 20px; }
+  .glyphicon {
+    width: 20px;
+    line-height: 20px;
+    text-align: center;
+  }
+
+  @media (min-width: $screen-sm-min) {
+    img { width: 40px; }
+    .glyphicon {
+      width: 40px;
+      line-height: 40px;
+    }
+  }
+
+  @media (min-width: $screen-lg-min) {
+    img { width: 80px; }
+    .glyphicon {
+      width: 80px;
+      line-height: 80px;
+    }
+  }
+
+  > * {
+    float: left;
+  }
+}
+
+.prop-gaver {
+  margin-bottom: 10px;
+}
+
+.props-receiver-avatar {
+  margin: 0 10px 10px 0;
+}
+
+.prop-create-at {
+  position: absolute;
+  top: 0;
+  right: 20px;
 }
 
 .prop-content {
-  @media (min-width: $screen-md-min) {
-    border-left: 1px solid #aaa;
-  }
+  border-top: 1px solid #ddd;
+  padding-top: 15px;
 }
 
 .prop-body {
@@ -22,12 +61,10 @@
   margin-bottom: 0;
   word-break: break-word;
 
-  @media (max-width: $screen-md-min) {
+  @media (max-width: $screen-md-max) {
     font-size: 2em;
   }
-}
-
-.selected-users {
-  margin: 20px auto;
-  text-align: center;
+  @media (max-width: $screen-xs-max) {
+    font-size: 1.4em;
+  }
 }
