--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,8 @@
 
 @import 'select2';
 @import 'animate';
+@import 'vendor/react-select';
+
 @import 'overrides/select2';
 @import 'components/navbar';
 @import 'components/props_form';
