fix styles to make it look better

--- a/app/assets/stylesheets/components/_props_form.scss
+++ b/app/assets/stylesheets/components/_props_form.scss
@@ -6,4 +6,9 @@
 .user-small-face {
   max-width: 30px;
   margin-right: 10px;
+
+  &__value {
+    max-width: 20px;
+    margin-right: 10px;
+  }
 }
